# tiger-c

./: .gitignore  CMakeLists.txt  README  README.md  README.rst  ast.c  ast.h  env.c  env.h  errmsg.c  errmsg.h  escape.c  escape.h  frame-mips.c  frame.h  ir.c  ir.h  lexer.l  main.c  merge.tig  parser-wrap.h  parser.y  ppast.c  ppast.h  ppir.c  ppir.h  semantic.c  semantic.h  symbol.c  symbol.h  table.c  table.h  temp.c  temp.h  tokens.h  translate.c  translate.h  types.c  types.h  utils.c  (+1 more)
tests/: queens.tig
